; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx3/extr_clock.c_mstick1_get_rate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-mx3/extr_clock.c_mstick1_get_rate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.clk = type { i32 }

@MXC_CCM_PDR2_MST1_PDF_MASK = common dso_local global i32 0, align 4
@MXC_CCM_PDR2_MST1_PDF_OFFSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.clk*)* @mstick1_get_rate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @mstick1_get_rate(%struct.clk* %0) #0 {
  %2 = alloca %struct.clk*, align 8
  %3 = alloca i64, align 8
  store %struct.clk* %0, %struct.clk** %2, align 8
  %4 = load i32, i32* @MXC_CCM_PDR2_MST1_PDF_MASK, align 4
  %5 = load i32, i32* @MXC_CCM_PDR2_MST1_PDF_OFFSET, align 4
  %6 = call i64 @PDR2(i32 %4, i32 %5)
  store i64 %6, i64* %3, align 8
  %7 = load %struct.clk*, %struct.clk** %2, align 8
  %8 = getelementptr inbounds %struct.clk, %struct.clk* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @clk_get_rate(i32 %9)
  %11 = load i64, i64* %3, align 8
  %12 = add i64 %11, 1
  %13 = udiv i64 %10, %12
  ret i64 %13
}

declare dso_local i64 @PDR2(i32, i32) #1

declare dso_local i64 @clk_get_rate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
